Back-end verificação de email e senha e cirptografia

--- a/cadastro.html
+++ b/cadastro.html
@@ -56,5 +56,6 @@
         <p>Já tem Login? <a href="login.html">Clique Aqui!</a></p>
       </form>
     </div>
+    <script src="js/auth.js"></script>
   </body>
 </html>
