--- a/login.html
+++ b/login.html
@@ -24,8 +24,8 @@
         <input
           placeholder="Digite sua senha aqui"
           type="password"
-          name="senha"
-          id="senha"
+          name="password"
+          id="password"
           required
         />
       </div>
